ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 9.0.0-rc0, 8.3.7, 8.0.30, 7.0.46
    • Affects Version/s: None
    • Component/s: None
    • Storage Execution
    • Fully Compatible
    • ALL
    • v8.3, v8.0, v7.0
    • Storage Execution 2026-05-11
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      If the server crashes in the middle of an initial sync, it may leave incomplete foreground index builds in the catalog which will be cleaned up by catalog reconciliation. However, FCV initialization happens before this. The FCV collection doesn't have any indexes that could cause problems, but other collections in the admin database can. Currently FCV init is initializing the entire admin db, so this can break.

            Assignee:
            Thomas Goyne
            Reporter:
            Thomas Goyne
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: