SERVER-125978 Don't rely on the index catalog being loaded for FCV init (#53243)

GitOrigin-RevId: 43108292f99dea0bec4caaae7454dafff4d75578